Disable prints and update actionFunction. Uncomment all screens protection. Added warning windows. Added protection for repeating

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,13 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt6 COMPONENTS
+find_package(Qt6 REQUIRED COMPONENTS
         Core
         Gui
         Widgets
         WebEngineWidgets
-        REQUIRED)
+        WebEngineCore
+)
 
 
 
@@ -30,6 +31,7 @@ target_link_libraries(simpleExamBrowser
         Qt::Gui
         Qt::Widgets
         Qt::WebEngineWidgets
+        Qt::WebEngineCore
         guarder
 )
 
@@ -54,27 +56,28 @@ if (WIN32)
                 "${QT_INSTALL_PATH}/plugins/platforms/qwindows${DEBUG_SUFFIX}.dll"
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/platforms/")
     endif ()
-    if (EXISTS "${QT_INSTALL_PATH}/plugins/styles/qwindowsvistastyle${DEBUG_SUFFIX}.dll")
+    if (EXISTS "${QT_INSTALL_PATH}/plugins/styles/qmodernwindowsstyle${DEBUG_SUFFIX}.dll")
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E make_directory
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/styles/")
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
-                "${QT_INSTALL_PATH}/plugins/styles/qwindowsvistastyle${DEBUG_SUFFIX}.dll"
+                "${QT_INSTALL_PATH}/plugins/styles/qmodernwindowsstyle${DEBUG_SUFFIX}.dll"
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/styles/")
     endif ()
     if (EXISTS "${QT_INSTALL_PATH}/resources")
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E make_directory
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/resources/")
+    endif ()
 
-        foreach (QT_RESOURCES "icudtl.dat" "qtwebengine_devtools_resources.pak" "qtwebengine_resources.pak" "qtwebengine_resources_100p.pak" "qtwebengine_resources_200p.pak")
+    foreach (QT_RESOURCES "icudtl.dat" "qtwebengine_devtools_resources.pak" "qtwebengine_resources.pak" "qtwebengine_resources_100p.pak" "qtwebengine_resources_200p.pak" "v8_context_snapshot.bin" "v8_context_snapshot.debug.bin")
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
                 "${QT_INSTALL_PATH}/resources/${QT_RESOURCES}"
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/resources/${QT_RESOURCES}")
-            endforeach (QT_RESOURCES)
-    endif ()
+    endforeach (QT_RESOURCES)
+
     if (EXISTS "${QT_INSTALL_PATH}/translations/qtwebengine_locales")
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E make_directory
@@ -84,13 +87,8 @@ if (WIN32)
                 "${QT_INSTALL_PATH}/translations/qtwebengine_locales/en-US.pak"
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/translations/qtwebengine_locales/")
     endif ()
-    foreach (QT_RESOURCES "icudtl.dat" "qtwebengine_devtools_resources.pak" "qtwebengine_resources.pak" "qtwebengine_resources_100p.pak" "qtwebengine_resources_200p.pak" "v8_context_snapshot.bin" "v8_context_snapshot.debug.bin")
-            add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-                    COMMAND ${CMAKE_COMMAND} -E copy
-                    "${QT_INSTALL_PATH}/resources/${QT_RESOURCES}"
-                    "$<TARGET_FILE_DIR:${PROJECT_NAME}>/resources/${QT_RESOURCES}")
-    endforeach (QT_RESOURCES)
-    foreach (QT_LIB Core Gui Widgets Quick WebEngineWidgets WebEngineCore OpenGL Network PrintSupport QuickWidgets QmlModels Qml WebChannel Positioning)
+
+    foreach (QT_LIB Core Gui Widgets Quick WebEngineWidgets WebEngineCore OpenGL Network PrintSupport QuickWidgets QmlModels QmlMeta QmlWorkerScript Qml WebChannel Positioning)
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
                 "${QT_INSTALL_PATH}/bin/Qt6${QT_LIB}${DEBUG_SUFFIX}.dll"
