--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(simpleExamBrowser)
+project(simpleExamBrowser VERSION 0.1.0)
 
 add_subdirectory(src/guard)
 
